--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,3 +1,10 @@
+<button (click)="onClickMe()">click me</button>
+{{clickMessage}}
+
+
+
+
+
 
 
 <!--<ul>-->
@@ -6,16 +13,19 @@
 <!--<div *ngIf="persons.length">-->
     <!--<h2> სულ არის {{persons.length}} ტიპი </h2>-->
 <!--</div>-->
+
 <!--{{persons | json}}-->
 
-    <h3>{{title}}</h3>
-    <div>
-        2 Way Binding
-        <input [(ngModel)]="persons.name">
-    </div>
-    <p>{{persons.name}}</p>
-    <div>
-        1 Way Binding
-        <input [value]="title">
-    </div>
-    {{persons | json}}
+
+
+
+<!--<h3>{{persons.id}}</h3>-->
+<!--<div>-->
+    <!--2 Way Binding-->
+    <!--<input [(ngModel)]="persons.name">-->
+<!--</div>-->
+<!--<p>{{persons.name}}</p>-->
+<!--<div>-->
+    <!--1 Way Binding-->
+    <!--<input [value]="title">-->
+<!--</div>-->
