--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,31 +1,2 @@
-<button (click)="onClickMe()">click me</button>
-{{clickMessage}}
-
-
-
-
-
-
-
-<!--<ul>-->
-    <!--<li *ngFor="#person of persons"> {{person.name}} {{person.lastname}} {{person.id}} </li>-->
-<!--</ul>-->
-<!--<div *ngIf="persons.length">-->
-    <!--<h2> სულ არის {{persons.length}} ტიპი </h2>-->
-<!--</div>-->
-
-<!--{{persons | json}}-->
-
-
-
-
-<!--<h3>{{persons.id}}</h3>-->
-<!--<div>-->
-    <!--2 Way Binding-->
-    <!--<input [(ngModel)]="persons.name">-->
-<!--</div>-->
-<!--<p>{{persons.name}}</p>-->
-<!--<div>-->
-    <!--1 Way Binding-->
-    <!--<input [value]="title">-->
-<!--</div>-->
+<input (keyup)="onKey($event)">
+<p>{{values}}</p>
