--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,2 +1,7 @@
-<input (keyup)="onKey($event)">
-<p>{{values}}</p>
+<input #newHero
+       (keyup.enter)="addHero(newHero.value)"
+       (blur)="addHero(newHero.value); newHero.value='' ">
+
+<button (click)=addHero(newHero.value)>Add</button>
+
+<ul><li *ngFor="let hero of heroes">{{hero}}</li></ul>
