--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,7 +1,8 @@
-<input #newHero
-       (keyup.enter)="addHero(newHero.value)"
-       (blur)="addHero(newHero.value); newHero.value='' ">
+<!--<input #newHero-->
+       <!--(keyup.enter)="addHero(newHero.value)"-->
+       <!--(blur)="addHero(newHero.value); newHero.value='' "-->
+       <!--(onmouseleave)="addHero(newHero.value); newHero.value='' ">-->
 
-<button (click)=addHero(newHero.value)>Add</button>
+<!--<button (click)=addHero(newHero.value)>Add</button>-->
 
-<ul><li *ngFor="let hero of heroes">{{hero}}</li></ul>
+<!--<ul><li *ngFor="#hero of heroes">{{hero}}</li></ul>-->
